# health_facilities_tracker_backend

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  create_dev_database.sql  create_locations_data.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  drop_dev_database.sql  pyproject.toml  replit.md  requirements-dev.txt  requirements.txt  run_alembic_revision.sh  run_alembic_upgrade.sh  run_app_with_docker.sh  run_app_with_uvicorn.sh  run_lint_tests.sh
.github/: pull_request_template.md
.github/workflows/: test_lint.yml
app/: main.py
app/auth/: custom_exceptions.py
app/auth/config/: auth_config.py
app/auth/dependencies/: auth_service_dependency.py  permission_service_dependency.py  role_service_dependency.py
app/auth/docs/: auth_docs.py  permission_docs.py  roles_docs.py
app/auth/factories/: auth_factory.py  role_factory.py  (+1 more)
app/core/: base_repository.py  base_service.py  custom_exceptions.py  mail_service.py
app/database/: session.py
app/templates/: account_creation.html  reset_password.html
attached_assets/: Pasted-You-are-working-inside-an-existing-Python-backend-proje_1777748727551.txt
db_migrations/: env.py
db_migrations/versions/: 179b8025fb43_update_users_user_profile_facilities.py  44ac8265a1eb_add_unique_constraint_to_facilities.py  5e5c265e9ef2_create_unique_constraints_districts_sub_.py  661f8ea08698_change_is_liscensed_to_is_licensed_in_.py  9c0fe9531631_update_altitude_range.py  a1b2c3d4e5f6_add_dynamic_form_system.py  f24402834ffe_initial_migrations.py
(+126 files in other folders)
