[project]
requires-python = ">=3.11"

[tool.black]
line-length = 120
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "D", "DTZ", "FAST", "A", "COM"]
ignore = ["D107", "D100", "D104", "D105", "COM812", "D415", "B008", "B009"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
